3.3/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-back
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
