3.3/cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
