3.3/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-front
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
