3.3/svc-back.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-back
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: mtool
      port: 80
