3.3/svc-cache.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: mtool
      port: 80
