3.3/svc-front.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-front
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: mtool
      port: 80
